# axum-login

examples/oidc/: .env.example  Cargo.toml
examples/oidc/src/: users.rs
examples/oidc/src/web/: app.rs  auth.rs  oauth.rs  protected.rs
