[package]
name = "example-oidc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.74"
axum = "0.7.1"
axum-login = { path = "../../axum-login" }
dotenvy = "0.15.7"
http = "1.0.0"
hyper = "1.0.1"
openidconnect = "3.5.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1"
thiserror = "1.0.50"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
